# ESO

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  COPYING.md  FILESTRUCTURE.md  README.md  TODO.md  app.py  eso_app.py  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
ESO/: __init__.py  eso.py
ESO/ga/: chromosome.py  gene.py  population.py
ESO/genetic_algorithm/: __init__.py  chromosome.py  gene.py  operator.py  population.py  selection.py
ESO/model/: data.py  mlp.py  model.py
ESO/utils/: AnnotationReader.py  Evaluation.py  _settings_types.py  logger.py  preprocessing.py  settings.py  test_settings.py  unpickler.py
doc/: api.rst  conf.py  index.rst
doc/api/: eso.ga.rst  eso.model.rst  eso.rst  eso.utils.rst  modules.rst  tests.rst
docs/: citation.md  configuration.md  index.md  requirements.txt
docs/api/: eso.md  ga.md  index.md  model.md  utils.md
docs/concepts/: cnn-training.md  evaluation.md  evolution.md  genes-and-chromosomes.md  overview.md  preprocessing.md
docs/getting-started/: first-run.md  gui.md  installation.md
docs/javascripts/: mathjax.js
docs/stylesheets/: extra.css
eso/: __init__.py  config.py  eso.py
eso/ga/: __init__.py  chromosome.py  gene.py  operator.py  population.py  selection.py
eso/model/: cnn.py  data.py  mlp.py  model.py
eso/utils/: AnnotationReader.py  Evaluation.py  _settings_types.py  logger.py  preprocessing.py  settings.py  unpickler.py
logs/tensorboard/20240510-100319/: events.out.tfevents.1715328199.MacBook-Air-von-Ufuk.local.23655.0
notebooks/: Create_Dataset.ipynb  Eso_notebook_demo.ipynb  Untitled.ipynb  demo.ipynb  example1_running_eso.ipynb  example3_inference.ipynb  example4_retrain.ipynb  model_test.ipynb  new_model.ipynb
settings/: current_run_settings.json  default_settings.json  settings.json
styles/: modern.qss
temp_folder/ga/: selection.py
temp_folder/model/: cnn.py
temp_folder/utils/: Evaluation.py  logger.py
tests/: conftest.py  test_ESO.py  test_chromosome.py  test_gene.py  test_model_model.py  test_operator.py
