# This section describes the requirements of the build/installation
# process itself. Being able to do this was the original reason to
# introduce pyproject.toml
[build-system]
requires = [
    "setuptools >=61",
    "setuptools_scm >=7",
]
build-backend = "setuptools.build_meta"

# This section provides general project metadata that is used across
# a variety of build tools. Notably, the version specified here is the
# single source of truth for eso's version
[project]
name = "eso"
description = "Evolutionary Spectrogram Optimisation : optimise the selection and size of frequency bands of spectrograms to maximise deep learning classification accuracy while minimising the model's size using genetic algorithms"
readme = "README.md"
maintainers = [
    { name = "Ufuk Çakır", email = "your@email.com" },
]
dynamic = ["version"]
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "librosa==0.10.1",
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "opencv-python-headless>=4.8.1.78",
    "pandas>=2.2.3",
    "pre-commit>=4.2.0",
    "pyqt5>=5.15.11",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "scikit-learn>=1.6.1",
    "setuptools>=79.0.0",
    "sympy>=1.14.0",
    "resampy>=0.4.3",
    "tensorboard>=2.19.0",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "yattag>=1.16.1",
]

[project.optional-dependencies]
tests = [
    "pytest",
    "pytest-cov",
    "nbval",
]
docs = [
    "ipykernel",
    "nbsphinx",
    "nbsphinx-link",
    "sphinx",
    "sphinx_mdinclude",
    "sphinx_rtd_theme",
    "pydata-sphinx-theme"
]


# The following section contains setuptools-specific configuration
# options. For a full reference of available options, check the overview
# at https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
[tool.setuptools]
packages = [
    "eso",
]

# Configure setuptools_scm, which extracts the version number from
# the version control system. For more information see its documentation:
# https://github.com/pypa/setuptools_scm
[tool.setuptools_scm]
version_scheme = "release-branch-semver"
local_scheme = "no-local-version"
write_to = "eso/_version.py"

# The following is the configuration for the pytest test suite
[tool.pytest.ini_options]
testpaths = [
    "tests",
    "notebooks",
]
